force-app/main/default/objects/CartItem__c/fields/ListPrice__c.field-meta.xml
<CustomField>
    <fullName>ListPrice__c</fullName>
    <description>This field will be automatically populated by the automation tool.</description>
    <label>List Price</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>