force-app/main/default/objects/CartItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Cart__c</columns>
    <columns>NAME</columns>
    <columns>ListPrice__c</columns>
    <columns>Amount__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>Quantity__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>